# materialerkennung

./: README.md
data/Features/: domaen&tsfreshselected_minimal.csv
data/Features/wood_plastic/features_zum_testen/: features_mit_audio.csv  features_ohne_audio.csv  tsfresh_com_10Features.csv  tsfresh_extracted_compreh.csv  tsfresh_extracted_mini.csv  tsfresh_mini_10Features.csv  tsfresh_selected_compreh.csv  wood_plastic_measurements_test.csv
data/Features/wood_plastic/features_zum_tranieren/: features_mit_audio.csv  features_ohne_audio.csv  (+6 more)
data/Measurements/: measurements1.csv
doc/firstStage/: choosing_the_features.ipynb
doc/firstStage/all_Features/: Features_extrahieren_Mit_Com_teilnummer1.csv  Features_extrahieren_Mit_Com_teilnummer2.csv  Features_extrahieren_Mit_Com_teilnummer4.csv  Features_extrahieren_Mit_Com_teilnummer5.csv  Features_extrahieren_Mit_Com_teilnummer6.csv
doc/orga/: Aufgabenbeschreibung.md  Projekteinstieg.md  projectPlan.md  timeline_-_Projekt_1__gantt_.xlsx
exploration/: FeatureAnalysis.ipynb  Feature_extrahieren_ComprehensiveFCParameter.ipynb  engin.ipynb  firstDataPreps.ipynb  firstMLPipeline.ipynb  mldog_example.ipynb  newFeatureAnalysis.ipynb  secondMLPipeline.ipynb  split_data.ipynb
exploration/package/: LICENSE  README.md  pyproject.toml
exploration/package/src/package_ella_unso/: prepare_my_data.py
exploration/package/src/prepare_my_data.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: DrillOG.py  environment.yml
src/mldog/: README.md  __init__.py
src/mldog/app/: context.py
src/mldog/util/: __init__.py
(+42 files in other folders)
